# TrafficJelly

./: .gitignore  README.md  arrival_stats.txt  assignment3.py  build.sh  graph.txt  main.py  qq_and_hist_plots.py
assignments/: assignment1.py  assignment2.py
cpp/: CMakeLists.txt  README.md
cpp/include/: action.h  action_generator.h  action_manager.h  basic_city.h  basic_road.h  basic_road_dynamics.h  basic_road_observation.h  car.h  car_parameters.h  edge.h  node.h  observation.h  route.h  route_planner.h  traffic_model.h  utils.h  visualizer.h
cpp/include/edge/: edge.h
cpp/include/edge/basic_road/: basic_road.h  basic_road_dynamics.h  basic_road_observation.h
cpp/include/node/: basic_city.h  node.h
cpp/src/: action.cpp  action_generator.cpp  action_manager.cpp  basic_city.cpp  basic_road.cpp  basic_road_dynamics.cpp  basic_road_observation.cpp  car.cpp  car_parameters.cpp  edge.cpp  main.cpp  node.cpp  observation.cpp  route.cpp  route_planner.cpp  traffic_model.cpp  visualizer.cpp
cpp/src/edge/: edge.cpp
cpp/src/edge/basic_road/: basic_road.cpp  basic_road_dynamics.cpp  basic_road_observation.cpp
cpp/src/node/: basic_city.cpp  node.cpp
cpp/tests/: load_test.cpp  save_test.cpp
cpp/tests/input/: load_test.txt
cpp/tests/output/: save_test.txt
graphviz/: game.py  simulation.py
graphviz/state/: game_road_state.py  game_state.py
graphviz/view/: game_graph_view.py  game_road_view.py  game_view.py
traffic_jelly/: camera.py  data_types.py  util.py  visualization.py
traffic_jelly/simulation/: __init__.py  basic_simulation.py  complex_simulation.py  simulation.py
